# Bacteria-2033Images-33Types-dataset

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-tf.txt  requirements.txt
configs/: default.yaml
notebooks/: 01_data_exploration.ipynb  02_pytorch_training.ipynb  03_tensorflow_training.ipynb
scripts/: download_dataset.py  evaluate.py  train_pytorch.py  visualize_dataset.py
src/bacteria_classifier/: __init__.py  dataset.py  models.py  transforms.py  utils.py
tests/: test_dataset.py  test_transforms.py
